<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/la_metric_icon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_sing_in_header_text_padding"
        android:textAlignment="center"
        android:text="@string/login_sing_in_header"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/login_sing_in_header_text"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_sing_in_header_text_padding"
        android:layout_marginStart="@dimen/login_edit_text_l_r_padding"
        android:layout_marginEnd="@dimen/login_edit_text_l_r_padding"
        android:ems="10"
        android:textColor="@android:color/darker_gray"
        android:background="@drawable/rounded_corners"
        android:hint="@string/login_email_hint"
        android:padding="@dimen/login_edit_start_padding"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_edit_text_l_r_padding"
        android:layout_marginEnd="@dimen/login_edit_text_l_r_padding"
        android:layout_marginTop="@dimen/login_edit_start_padding_16"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:textColor="@android:color/darker_gray"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/login_edit_start_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_check_box_padding"
        android:layout_marginTop="@dimen/login_check_box_padding"
        android:layout_marginEnd="@dimen/login_check_box_padding"
        android:text="@string/login_checkbox_hint"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/b_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_edit_text_l_r_padding"
        android:layout_marginTop="@dimen/login_edit_start_padding_16"
        android:layout_marginEnd="@dimen/login_edit_text_l_r_padding"
        android:background="@drawable/rounded_button"
        android:text="@string/login_sing_in_button"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/sing_in_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_edit_text_l_r_padding"
        android:layout_marginTop="@dimen/login_edit_start_padding_16"
        android:layout_marginEnd="@dimen/login_edit_text_l_r_padding"
        android:text="@string/login_forgot_pass"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_login" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_edit_text_l_r_padding"
        android:layout_marginTop="@dimen/login_edit_start_padding_16"
        android:layout_marginEnd="@dimen/login_edit_text_l_r_padding"
        android:text="@string/login_new_account"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</android.support.constraint.ConstraintLayout>