<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssistantActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/la_metric_icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/account_text_padding"
        android:layout_marginTop="@dimen/account_text_padding"
        android:layout_marginEnd="@dimen/account_text_padding"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_edit_start_padding"
            android:text="@string/assistant_header"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/account_header_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/account_description_header"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/account_text_padding"
                android:text="@string/assistant_list_header"
                android:textAlignment="viewStart"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/account_header_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/account_text_padding"
                android:text="@string/assistant_text_1"
                android:textAlignment="viewStart"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/account_header_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/account_text_padding"
                android:text="@string/assistant_text_2"
                android:textAlignment="viewStart"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/account_header_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/account_text_padding"
                android:text="@string/assistant_text_3"
                android:textAlignment="viewStart"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/account_header_text_size" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/account_text_padding"
        android:layout_marginTop="@dimen/account_button_padding"
        android:layout_marginEnd="@dimen/account_text_padding"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/b_allow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_edit_text_l_r_padding"
            android:layout_marginTop="@dimen/login_edit_start_padding_16"
            android:layout_marginEnd="@dimen/login_edit_text_l_r_padding"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/b_allow_text"
            android:textColor="@color/sing_in_text_color"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <Button
            android:id="@+id/b_deny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_edit_text_l_r_padding"
            android:layout_marginTop="@dimen/login_edit_start_padding_16"
            android:layout_marginEnd="@dimen/login_edit_text_l_r_padding"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/b_deny"
            android:textColor="@color/sing_in_text_color"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>