<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.IconsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_icons"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:paddingStart="@dimen/text_start_padding"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:id="@+id/pb_spinner"
            android:layout_width="wrap_content"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@android:color/white"
            android:layout_margin="@dimen/preloader_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />
    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/tv_loading_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/loading_text_size"
        android:text="@string/loading_header"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/ll_retry_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/loading_text_size"
            android:text="@string/error_header"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/darker_gray"
            android:layout_margin="@dimen/error_padding" />

        <Button
            android:id="@+id/b_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/error_padding"
            android:paddingStart="@dimen/sing_in_button_text_padding"
            android:paddingEnd="@dimen/sing_in_button_text_padding"
            android:text="@string/retry_button_header"
            android:textColor="@color/sing_in_text_color"
            android:textSize="@dimen/button_text_size"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_icon_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/icon_list_padding"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_icons" />

</android.support.constraint.ConstraintLayout>